<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:http="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_nuevo_paciente"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NuevoPacienteActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="607dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tNombreArchivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nombre" />

        <EditText
            android:id="@+id/enombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapSentences" />

        <TextView
            android:id="@+id/apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Apellidos" />

        <EditText
            android:id="@+id/eapellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapSentences" />

        <TextView
            android:id="@+id/fnac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Fecha Nacimiento" />

        <Button
            android:id="@+id/bfnac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formato_fecha" />

        <EditText
            android:id="@+id/efnac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/formato_fecha"
            android:inputType="date"
            http:layout_constraintLeft_toLeftOf="parent"
            http:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Número de teléfono (Usuario)" />

        <EditText
            android:id="@+id/etelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="9 dígitos"
            android:inputType="phone" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Contraseña para acceder" />

        <EditText
            android:id="@+id/epass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="mínimo 8 caractéres"
            android:inputType="textPassword"
            android:maxLength="12" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addPaciente"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="#00897B"
            android:gravity="center"
            android:text="Añadir Paciente" />
    </LinearLayout>

</LinearLayout>