<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:http="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_paciente_editar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".Paciente_EditarActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bdescarga"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:drawableTop="@android:drawable/stat_sys_download"
                android:gravity="center"
                android:text="Generar Informe" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="38dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Nombre: "
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tNombre_paciente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Apellidos: "
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tApellido_paciente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Fecha de nacimiento: "
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tFecha_paciente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Teléfono: "
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tTelefono_paciente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:textColor="#00897B"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/editar"
                    android:layout_width="150dp"
                    android:layout_height="70dp"
                    android:drawableTop="@android:drawable/ic_menu_edit"
                    android:text="EDITAR" />

                <Button
                    android:id="@+id/eliminar"
                    android:layout_width="150dp"
                    android:layout_height="70dp"
                    android:backgroundTint="#cc0000"
                    android:drawableTop="@android:drawable/ic_menu_delete"
                    android:text="ELIMINAR" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bInformes"
                    android:layout_width="150dp"
                    android:layout_height="70dp"
                    android:drawableTop="?attr/actionModePasteDrawable"
                    android:text="Informes" />

                <Button
                    android:id="@+id/btratamiento"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/icons8_masaje_30"
                    android:text="Tratamientos" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Cuestionario Síntomas"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <Button
                android:id="@+id/banamnesis"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="Anámnesis" />

            <Button
                android:id="@+id/bestructura1"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="Estructura parte 1" />

            <Button
                android:id="@+id/bestructura2"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="Estructura parte 2" />

            <Button
                android:id="@+id/bVisceral"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="Visceral" />

            <Button
                android:id="@+id/brespiratorio"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="Sistema Respiratorio" />

            <Button
                android:id="@+id/bcraneo"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="Cráneo" />

            <Button
                android:id="@+id/beliminarc"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#cc0000"
                android:text="Eliminar respuestas" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>