...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/bAdd"
            android:layout_width="57dp"
            android:layout_height="59dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:scaleType="fitXY"
...
            http:layout_constraintBottom_toBottomOf="parent"
            http:layout_constraintEnd_toEndOf="parent"
            http:srcCompat="@android:drawable/ic_input_add"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            tools:layout_editor_absoluteY="627dp">

        </androidx.recyclerview.widget.RecyclerView>
...
