<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/recarga"
        android:icon="@android:drawable/ic_popup_sync"
        android:title="ATRAS"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/atras"
        android:icon="?attr/actionModeCloseDrawable"
        app:showAsAction="ifRoom"
        android:title="ATRAS" />


</menu>